<resources>
    <string name="app_name">Lawan.id</string>
    <string name="onboarding1">Laporan Kekerasan</string>
    <string name="text_onboarding1">Jangan biarkan kekerasan atau pelecehan terjadi lagi karena itu adalah dunia yang indah tanpa kekerasan</string>
    <string name="onboarding2">Kontak Pelaporan</string>
    <string name="text_onboarding2">Pengguna dapat melaporkan jika ada kekerasan atau pelecehan yang dialami</string>
    <string name="onboarding3">Edukasi</string>
    <string name="text_onboarding3">Memberikan informasi dan pengalaman untuk mencegah kekerasan atau pelecehan</string>
    <string name="edukasi">Edukasi</string>
    <string name="laporan">Laporan</string>
    <string name="kontak">Kontak Polsek</string>
    <string name="btn_onboarding">Berikutnya</string>
    <string name="isi_surat">Melalui surat ini, saya yang bertanda tangan di bawah ini:
Nama :
NIK :
Alamat :
Nomor Tlp :

Menyatakan sebenar-benarnya bahwa saya bersedia mengikuti syarat dan ketentuan pemakaian aplikasi lawan.id dan tidak memberikan laporan palsu selama menggunakan aplikasi lawan.id.

Demikian surat pernyataan ini saya buat dengan sesungguh-sungguhnya tanpa paksaan atau intervensi dari siapa pun. Apabila suatu hari pernyataan laporan saya yang saya unggah melalui aplikasi lawan.id tidak benar, maka saya siap dituntut sesuai dengan aturan dan hukum yang berlaku.

(Nama Tempat),
Saya yang menyatakan,



(Tanda tangan dan materai)
Nama terang</string>
    <string name="isi_SyaratdanKetentuan">Perjanjian Penggunaan Layanan aplikasi Lawan.id (“Perjanjian”) antara pengguna sebagai pihak yang menggunakan aplikasi Lawan.id dan situs Lawan.id, memuat syarat-syarat dan ketentuan penggunaan layanan situs www.lawan.id.com dan aplikasi Lawan.id yang berlaku bagi pengguna untuk dapat menggunakan situs Lawan.id. Mohon untuk membaca dengan hati-hati Perjanjian ini. Anda harus membaca, memahami, menerima dan menyetujui semua persyaratan dan ketentuan dalam Perjanjian ini sebelum menggunakan aplikasi dan/atau menerima konten yang terdapat di dalamnya. Dengan menggunakan aplikasi dan/atau melanjutkan akses terhadap situs Lawan.id, Pengguna menyetujui seluruh persyaratan dan ketentuan yang terdapat di dalamya, dan oleh karena itu menyetujui untuk terikat dalam suatu Perjanjian dengan Kami dan oleh karenanya Anda menyatakan persetujuan untuk dapat menerima layanan dan akses atas seluruh konten yang terdapat dalam situs Lawan.id. Jika Anda tidak menerima dan menyetujui salah satu, sebagian atau seluruh isi dari syarat dan ketentuan di Perjanjian ini, Pengguna tidak di perkenankan untuk mengakses lebih lanjut dan dipersilakan untuk meninggalkan situs Lawan.id. Setiap kegiatan terkait dengan penggunaan situs Lawan.id maka baik kami dan pengguna, dilindungi secara hukum melalui ketentuan peraturan terhadap segala bentuk perikatan yang timbul dari segala aktifitas di Situs Lawan.id telah memenuhi kaidah dan syarat sahnya suatu perikatan sebagaimana yang tercantum dalam Kitab Undang-Undang Hukum Perdata Indonesia.

        <b>Registrasi</b>

1. Pengguna dapat mengunduh aplikasi Lawan id pada application store.
2. Pengguna wajib memastikan bahwa aplikasi Lawan id merupakan aplikasi resmi.
3. Pengguna dapat melakukan pendaftaran melalui aplikasi Lawan id yang telah berhasil diunduh dan wajib memastikan kebenaran dan kelengkapan data ketika melakukan pendaftaran.
4. Pengguna membuat password Lawan id kemudian aplikasi akan mengirimkan Magic Link yang dikirimkan ke nomor handphone nasabah.
5. Pengguna dapat melakukan login dengan menggunakan nomor handphone dan password yang telah dibuat. Ketentuan terkait user id dan password diatur pada poin tersendiri.

        <b>User ID dan Password</b>

1. User ID dan Password merupakan kode yang bersifat rahasia dan kewenangan penggunaannya ada pada Pengguna. Pengguna wajib menjaga dengan baik User ID dan Password tersebut.
2. Lawan Id berhak untuk memberikan User ID tanpa harus mendapatkan persetujuan terlebih dahulu dari Pengguna.
3. Password bersifat rahasia. Pengguna wajib menjaga kerahasiaannya terhadap siapapun, bahkan petugas Lawan Id sekalipun.
4. Ketentuan password Lawan Id :
   - Password terdiri dari 8 sampai 20 digit alfanumerik.
   - Password harus mengandung sedikitnya satu huruf kapital, satu huruf kecil dan angka.
   - Password tidak diperbolehkan mengandung spasi.
5. Lawan Id Pengguna akan diblokir Jika melakukan hal berikut :
   - Salah memasukkan User ID dan atau Password sebanyak 3 kali berturut-turut ketika login maupun transaksi.
   - User ID dan atau password dilaporkan telah diketahui oleh orang lain.
   - Hasil penelitian Lawan Id mengindikasikan adanya kemungkinan user id dan password Pengguna telah diketahui oleh orang lain.
6. Pengguna dapat menggunakan layanan Lawan Id kembali setelah User ID dan Password terblokir dengan menghubungi Layanan Call Center Lawan Id atau mengunjungi Kantor Lawan Id terdekat dengan membawa bukti identitas asli .
7. Pengguna wajib mengamankan User ID dan Password Lawan Id dengan cara:
   - Tidak memberitahukan User ID kepada orang lain, kecuali petugas Lawan Id ketika Pengguna melakukan komplain atas penggunaan Lawan Id.
   - Tidak memberitahukan password Lawan Id kepada siapapun, bahkan petugas Lawan Id sekalipun.
   - Tidak mencatatkan Password Lawan Id pada kertas atau menyimpannya secara tertulis atau sarana penyimpanan lainnya yang memungkinkan diketahui orang lain.
   - Berhati-hati menggunakan User ID dan Password Lawan Id agar tidak diketahui orang lain.
   - Mengganti Password Lawan Id secara berkala.
   - Tidak menggunakan Password Lawan Id yang diberikan oleh orang lain atau yang mudah diterka seperti tanggal lahir atau kombinasinya, nomor telepon dan lain-lain
8. Dalam hal Pengguna mengetahui atau menduga Password Lawan Id telah diketahui oleh orang lain yang tidak berwenang, maka Nasabah wajib segera melakukan pengamanan dengan melakukan perubahan Password.
9. Apabila karena suatu sebab Pengguna tidak dapat melakukan perubahan Password maka Pengguna wajib memberitahukan kepada Lawan Id. Segala instruksi transaksi berdasarkan penggunaan User ID dan Password yang terjadi sebelum Admin yang berwenang dari Lawan Id menerima secara tertulis laporan tersebut merupakan tanggung jawab sepenuhnya dari Pengguna.
10.Segala penyalahgunaan User ID maupun Password Lawan Id (termasuk OTP) merupakan tanggung jawab Pengguna Pengguna dengan ini membebaskan Lawan Id dari segala tuntutan apapun yang mungkin timbul, baik dari pihak lain maupun Pengguna sendiri sebagai akibat penyalahgunaan User ID maupun Password Lawan Id.

        <b>Laporan </b>

1. Untuk setiap Laporan :
   - Pengguna wajib memastikan ketepatan dan kelengkapan perintah transaksi (termasuk memastikan bahwa semua data yang diperlukan untuk transaksi telah diisi secara lengkap dan benar). Lawan Id tidak bertanggung jawab terhadap segala akibat yang mungkin timbul yang disebabkan kelalaian, ketidaklengkapan, ketidakjelasan, atau ketidaktepatan perintah/data dari Pengguna.
   - Pengguna memiliki kesempatan untuk memeriksa kembali dan atau membatalkan data yang telah diisi pada saat konfirmasi yang dilakukan secara otomatis oleh sistem sebelum memberikan persetujuan atas transaksi dimaksud.
   - Persetujuan atas pelaksanaan transaksi dilakukan apabila Pengguna telah meyakini kebenaran dan kelengkapan data yang diisi pada saat sistem melakukan konfirmasi.
2. Segala transaksi yang telah diperintahkan kepada Lawan Id dan disetujui oleh Pengguna tidak dapat dibatalkan.
3. Setiap perintah yang telah disetujui dari Pengguna yang tersimpan pada pusat data Lawan Id merupakan data yang benar yang diterima sebagai bukti perintah dari Pengguna kepada Lawan Id untuk melaksanakan transaksi yang dimaksud.
4. Lawan Id menerima dan menjalankan setiap perintah dari Pengguna sebagai perintah yang sah berdasarkan penggunaan User ID dan Password dan untuk itu Lawan Id  mempunyai kewajiban untuk meneliti atau menyelidiki keaslian maupun keabsahan atau kewenangan pengguna User ID dan Password atau menilai maupun membuktikan ketepatan maupun kelengkapan perintah dimaksud, dan oleh karena itu perintah tersebut sah mengikat Pengguna dengan sebagaimana mestinya.
5. Setiap informasi/Laporan yang telah mendapat persetujuan dari Pengguna yang tersimpan dalam pusat data merupakan data yang benar yang diterima sebagai bukti atas instruksi dari Pengguna kepada Lawan Id untuk menjalankan Laporann yang dimaksud
6. Lawan Id berhak untuk tidak melaksanakan perintah dari Pengguna, apabila Lawan Id mengetahui atau mempunyai alasan untuk menduga bahwa penipuan atau aksi kejahatan telah atau akan dilakukan.
7. Sebagai bukti bahwa Laporan yang diperintahkan Pengguna telah berhasil dilakukan oleh Lawan Id, Pengguna akan mendapatkan notifikasi dan Pengguna dapat melihat prosesnya di riwayat Laporan.
8. Untuk tidak membantah keabsahan, kebenaran atau keaslian bukti instruksi dan komunikasi yang ditransmisi secara elektronik antara kedua belah pihak, termasuk dokumen dalam bentuk catatan komputer atau bukti transaksi Lawan Id, tape/cartridge, print out komputer, salinan atau bentuk penyimpanan informasi yang lain, dan semua alat atau dokumen tersebut merupakan satu-satunya alat bukti yang sah atas Laporan-laporan melalui Lawan Id.
9. Lawan Id berhak menghentikan layanan Lawan Id untuk sementara waktu maupun untuk jangka waktu tertentu yang ditentukan oleh Lawan Id untuk keperluan pembaharuan, pemeliharaan atau untuk tujuan lain dengan alasan apapun yang dianggap baik oleh Lawan Id, dan untuk itu Lawan Id tidak berkewajiban mempertanggung jawabkannya kepada siapapun.
10.Dengan melakukan Laporan melalui Lawan Id, Pengguna mengakui semua komunikasi dan instruksi dari Pengguna- yang diterima Lawan Idakan diperlakukan sebagai alat bukti yang sah meskipun tidak dibuat dokumen tertulis ataupun dikeluarkan dokumen yang ditandatangani.


</string>
    <string name="title_pengajuanLaporan">Pengajuan Laporan</string>
    <string name="title_laporanDiproses">Laporan Diproses</string>
    <string name="title_laporanDiterima">Laporan Diterima</string>
    <string name="title_laporanDitolak">Laporan Ditolak</string>
    <string name="jumlah_riwayat">10</string>
    <string name="txt_laporan">Laporan</string>
    <string name="jenis_laporan">Pelecehan Seksual</string>
    <string name="tanggal_lapor">22 Oktober 2023</string>
    <string name="alamat">Jl Ahmad Yani 202 Sumatera Utara  Indonesia</string>
    <string name="status_proses">Dalam Proses</string>
    <string name="status_menunggu">Menunggu</string>
    <string name="status_diterima">Diterima</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_edukasi">Edukasi</string>
    <string name="title_kontakLaporan">Kontak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="data_judul">
        <item>Pembulian di Institut Teknologi Batam</item>
        <item>Pembulian di SMA</item>
        <item>Pelecehan di Universitas</item>
        <item>Pembulian di Sekolah</item>
    </string-array>
    <string-array name="list_kekerasan">
        <item>Fisik atau Psikis</item>
        <item>Pelecehan Seksual</item>
        <item>CycberBullying</item>
        <item>Eksploitasi</item>
        <item>Kekerasan Dalam Rumah Tangga</item>
    </string-array>
    <string-array name="data_jenis">
        <item>Bullying</item>
        <item>Cyberbullying</item>
        <item>Fisik atau Psikis</item>
        <item>Pelecehan Seksual</item>
    </string-array>
    <string-array name="data_tanggal">
        <item>1/6/2023</item>
        <item>2/6/2023</item>
        <item>3/6/2023</item>
        <item>4/6/2023</item>
    </string-array>
</resources>