<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.massivechallage.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="com.example.massivechallage.ui.dashboard.DashboardFragment"
        android:label="@string/title_laporan"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_edukasi"
        android:name="com.example.massivechallage.ui.notifications.NotificationsFragment"
        android:label="@string/title_edukasi"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_kontak"
        android:name="com.example.massivechallage.KontakLaporanFragment"
        android:label="@string/title_kontakLaporan"
        tools:layout="@layout/fragment_kontak_laporan" />
</navigation>